--- a/ZPZP/ZPZP.csproj
+++ b/ZPZP/ZPZP.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Production\Worker\**" />
+    <Content Remove="Views\Production\Worker\**" />
+    <EmbeddedResource Remove="Views\Production\Worker\**" />
+    <None Remove="Views\Production\Worker\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
       <PrivateAssets>all</PrivateAssets>
